--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Women in tech 2016 website",
+  "name": "inspirewit",
   "version": "0.0.1",
-  "description": "Website for inspirewit.com",
+  "description": "Website for the 2016 inspirewit.com",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
