--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "https://github.com/HackSocNotts/wit.git"
   },
   "author": "Harry Mumford-Turner",
-  "license": "ISC",
+  "license": "GPL3",
   "bugs": {
     "url": "https://github.com/HackSocNotts/wit/issues"
   },
