--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "url": "https://github.com/HackSocNotts/wit/issues"
   },
   "devDependencies": {
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
