--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "devDependencies": {
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-serve": "^0.1.6",
-    "grunt-cli": "^0.1.13"
+    "grunt-serve": "^0.1.6"
   },
   "dependencies": {
     "express": "^4.13.3",
